<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share_pref"
        android:icon="@android:drawable/star_on"
        android:orderInCategory="0"
        android:title="@string/share_preference"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/FileIoo"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/fileio"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/SQlite"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/sqlate"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        />
</menu>